2004-10-03  Kees Cook  <kees@outflux.net>

	* src/dialogs/rdf.cpp, src/dialogs/repr-util.cpp, src/dialogs/repr.h:
	  Since "dc:title" can appear at multiple XML levels, a way to
	  control max depth in searching was added.  (Closes bug #1009290)

2004-09-30  MenTaLguY  <mental@rydia.net>

	* src/widgets/document-tree-model.cpp:
	  more bug fixes
	
	* src/widgets/layer-selector.cpp, src/widgets/layer-selector.h:
	  get the layer selector sort of in more order

2004-09-28  Ted Gould  <ted@gould.cx>

	* src/verbs.cpp, src/verbs.h, src/view.cpp:

	Making it so that actions get deleted as views get destroyed.

2004-09-27  Ted Gould  <ted@gould.cx>

	* src/desktop.h, src/forward.h, src/interface.cpp, src/interface.h,
	src/select-toolbar.cpp, src/shortcuts.cpp, src/shortcuts.h,
	src/toolbox.cpp, src/toolbox.h, src/verbs.cpp, src/verbs.h,
	src/dialogs/align.cpp, src/dialogs/align.h,
	src/dialogs/desktop-properties.cpp, src/dialogs/display-settings.cpp,
	src/dialogs/export.cpp, src/dialogs/find.cpp,
	src/dialogs/item-properties.cpp, src/dialogs/object-properties.cpp,
	src/dialogs/text-edit.cpp, src/dialogs/transformation.cpp,
	src/dialogs/xml-tree.cpp, src/helper/action.cpp, src/helper/action.h:

	Wow, alot of files changed.  The ones that changed the most are
	verb.cpp and verb.h, which are almost entirely different.  What happened
	here is the the verbs were made object oriented.  So, as the verbs
	are built into everything, lots of files changed.  Now the code
	for the verbs is much cleaner, and I think a little bit faster.
	Also, it will be easier to extend the verbs for use in effects.

2004-09-26  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/libnr/nr-matrix.h, src/libnr/nr-matrix.cpp:
	  Get rid of operator NR::translate(), which was allowing
	  *implicit* (and typically lossy) conversion to NR::translate,
	  and which made a bug hard to find.

	* src/sp-gradient-test.cpp: New unit test file.  I believe this is the
	  first test that tests an SPObject.