@@ -18,7 +18,6 @@
 SPObject *sp_object_repr_build_tree (SPDocument *document, SPRepr *repr);
 
 GType sp_repr_type_lookup (SPRepr *repr);
-GType sp_object_type_lookup (const gchar *name);
 
 void sp_object_type_register(gchar const *name, GType type);
 
